@@ -1,4 +1,4 @@
-$Id: History,v 1.50 2002-12-05 16:25:34 asaim Exp $
+$Id: History,v 1.51 2003-01-20 14:17:19 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Jan 20, 2003, J.Allison (intercoms-V05-00-00, co-works vis-V05-00-00)
+- Added G4VVisManager::Draw methods for hits and trajectories.
 
 Dec 4, 2002, M.Asai (intercoms-V04-01-04, intercoms-V04-01-05)
 - Migration to new G4ApplicationState.
